3-tiers/bdd.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  clusterIP: None
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql

  template:
    metadata:
      labels:
        app: postgresql

    spec:
      containers:
      - name: postgresql
        image: postgres:14
        ports:
        - containerPort: 5432

        resources:
          requests:
            cpu: "300m"
            memory: "512Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"

        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 5

        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

        - name: init-db-volume
          mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: init-db-volume
        configMap:
          name: init-db

  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
